--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ lerna-debug.log*
 # Dist
 dist/ 
 
+#Archivos de texto
+*.txt
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
